# python-package-template

./: cookiecutter.json
{{cookiecutter.package_slug}}/: .flake8  .gitignore  README.md  py.typed  pyproject.toml
{{cookiecutter.package_slug}}/docs/: README.md  implementation.md
{{cookiecutter.package_slug}}/src/{{cookiecutter.package_slug}}/: __init__.py  main.py
{{cookiecutter.package_slug}}/tests/: __init__.py  test_main.py
